# SkyBox

./: .gitmodules  CMakeLists.txt  CMakePresets.json  application.cpp  application.h  chacha20.cpp  chacha20.h  crypt.cpp  crypt.h  crypt_file.cpp  detect_session.cpp  detect_session.h  file.cpp  file.h  file_task.cpp  file_task.h  main.cpp  plain_http_session.cpp  plain_http_session.h  plain_websocket_session.h  sha256.cpp  ssl_http_session.cpp  ssl_http_session.h  ssl_websocket_session.cpp  table_delegate.h  table_model.cpp  table_model.h  table_view.cpp  task_item.h  tcp_server.cpp  tcp_server.h  websocket_session.cpp  websocket_session.h  widget.cpp  widget.h
.github/workflows/: ci.yml
cli/: CMakeCache.txt  CMakeLists.txt  Makefile  base_session.h  cli.cpp  cmake_install.cmake  download_session.cpp  download_session.h  plain_websocket_client.cpp  plain_websocket_client.h  upload_session.cpp  upload_session.h
cli/cli/: Makefile  cmake_install.cmake
cli/cli/cli_autogen/: moc_predefs.h  mocs_compilation.cpp
cli/cli/cli_autogen/NROTIYFCH4/: moc_widget.cpp
client/: CMakeLists.txt  client.cpp
cmake/: vcpkg.json
cmd/: CMakeLists.txt  application.cpp  application.h  cmd.cpp
config/: config.h
crypt/: blake2b.cpp  blake2b.h  chacha20.cpp  chacha20.h  crypt.h  easy.cpp  easy.h  passwd.cpp  passwd.h  random.cpp  random.h  sha256.cpp  sha256.h
file/: cotrol_file_handle.cpp  cotrol_file_handle.h  cotrol_session.cpp  cotrol_session.h  crypt_file.cpp  crypt_file.h  directory.h  download_file_handle.cpp  download_file_handle.h  download_session.cpp  download_session.h  event.h  event_manager.cpp  event_manager.h  file.cpp  file.h  file_context.h  file_http_handle.cpp  file_http_handle.h  file_item.h  file_session.cpp  file_session.h  file_session_manager.cpp  file_session_manager.h  file_task.cpp  file_task.h  file_transfer_client.cpp  file_transfer_client.h  hash_file.cpp  hash_file.h  task_item.h  upload_file_handle.cpp  upload_file_handle.h  upload_session.cpp  upload_session.h
gui/: CMakeLists.txt  file_item.cpp  file_item.h  file_item_delegate.cpp  file_item_delegate.h  file_item_widget.cpp  file_item_widget.h  file_list_widget.cpp  file_list_widget.h  file_model.cpp  file_model.h  file_task_model.cpp  file_task_model.h  file_widget.cpp  file_widget.h  files_delegate.cpp  files_delegate.h  files_model.cpp  files_model.h  files_view.cpp  files_view.h  files_widget.cpp  files_widget.h  gfile.h  ip_edit.cpp  ip_edit.h  login_widget.cpp  login_widget.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  settingspage.cpp  settingspage.h  table_delegate.cpp  table_delegate.h  table_model.cpp  table_model.h  table_view.cpp  (+18 more)
log/: log.h
net/: async_http.h  async_http_client.cpp  async_http_client.h  async_https_client.cpp  async_https_client.h  base_session.h  buffer.cpp  buffer.h  byte_order.h  detect_session.cpp  detect_session.h  download_file_handle.cpp  download_file_handle.h  download_session.cpp  download_session.h  exception.cpp  exception.h  executors.cpp  executors.h  file_http_handle.cpp  file_http_handle.h  file_websocket_handle.cpp  file_websocket_handle.h  http_client.cpp  http_client.h  http_handle.h  http_session.h  net_buffer.h  plain_http_session.cpp  plain_http_session.h  plain_websocket_client.cpp  plain_websocket_client.h  plain_websocket_session.cpp  plain_websocket_session.h  reflect.hpp  scoped_exit.hpp  session_handle.h  socket.cpp  socket.h  ssl_http_session.cpp  (+12 more)
protocol/: codec.cpp  codec.h  message.h
qt/: CMakeLists.txt  main.cpp  table_delegate.cpp  table_model.cpp  table_model.h  table_view.cpp  table_view.h  task.h  task_item.h  widget.cpp  widget.h
server/: CMakeLists.txt  application.cpp  application.h  server.cpp
util/: singleton.h
